# LLM-TextKit

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  secrets.toml.example
.streamlit/: config.toml
backend/: __init__.py
backend/classification/: __init__.py  content_analysis_core.py  content_analysis_workflow.py
backend/clustering/: __init__.py  clustering_core.py  clustering_workflow.py
backend/translation/: __init__.py  translator.py
frontend/: Home.py  __init__.py  app.py  ui_components.py
frontend/demo_data/: demo_texts.csv
frontend/page/: __init__.py  ai_translation.py  sentiment_analysis.py  text_clustering.py
utils/: __init__.py  llm_tools.py  text_utils.py
