[project]
name = "llm-textkit"
version = "0.1.0"
description = "LLM-TextKit - Sentiment analysis, text clustering, and intelligent translation powered by Large Language Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.4",
    
    # LLM and AI
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "openai>=1.45.0",
    
    # Monitoring and observability
    "langfuse>=2.48.1",
    
    # Data processing
    "pandas>=2.2.2",
    
    # Text processing
    "regex~=2023.10.3",
    
    # UI
    "streamlit>=1.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend", "utils"]

[tool.uv]
dev-dependencies = []
